[gd_scene load_steps=44 format=2]

[ext_resource path="res://object/khv/KinhHienVi.tscn" type="PackedScene" id=1]
[ext_resource path="res://object/plugin_khv/PluginKHV.tscn" type="PackedScene" id=2]
[ext_resource path="res://asset/sprite3D/hopdungtieuban/TieuBan.glb" type="PackedScene" id=3]
[ext_resource path="res://asset/sprite2D/sample/hanh/x4.png" type="Texture" id=4]
[ext_resource path="res://object/tutorial/notebook.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/frame6/practice.gd" type="Script" id=6]
[ext_resource path="res://asset/font/Roboto-Black.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://object/user_interface/user_interface.tscn" type="PackedScene" id=8]
[ext_resource path="res://reuse/theme/theme_full.tres" type="Theme" id=9]
[ext_resource path="res://asset/sprite2D/UI/bg_main.png" type="Texture" id=10]
[ext_resource path="res://asset/sprite2D/lab/len4x.png" type="Texture" id=11]
[ext_resource path="res://reuse/materials/lightMauVat.gdshader" type="Shader" id=12]
[ext_resource path="res://reuse/materials/outline.gdshader" type="Shader" id=13]
[ext_resource path="res://reuse/materials/blur.tres" type="Shader" id=14]
[ext_resource path="res://asset/sprite2D/lab/GiayLauOngKinhv2.png" type="Texture" id=15]
[ext_resource path="res://asset/sprite2D/UI/question.png" type="Texture" id=16]
[ext_resource path="res://asset/sprite2D/lab/DauSoiKinh.png" type="Texture" id=17]
[ext_resource path="res://icon.png" type="Texture" id=18]
[ext_resource path="res://asset/sprite2D/UI/100x.png" type="Texture" id=20]
[ext_resource path="res://asset/sprite2D/UI/4xPick.png" type="Texture" id=21]
[ext_resource path="res://asset/sprite2D/UI/RoundedBackGround.png" type="Texture" id=22]
[ext_resource path="res://asset/sprite2D/lab/ChaiDauSoiKinh.png" type="Texture" id=23]
[ext_resource path="res://asset/sprite2D/lab/GiayLauDau.png" type="Texture" id=24]
[ext_resource path="res://asset/sprite2D/UI/40x.png" type="Texture" id=26]
[ext_resource path="res://asset/sprite2D/UI/10x.png" type="Texture" id=27]
[ext_resource path="res://asset/sprite2D/lab/NapDauSoiKinh.png" type="Texture" id=28]
[ext_resource path="res://asset/sprite2D/lab/Ong_Hut_DD.png" type="Texture" id=29]
[ext_resource path="res://asset/sprite3D/hopdungtieuban/TieuBan.gd" type="Script" id=32]
[ext_resource path="res://object/alert/alert.tscn" type="PackedScene" id=33]
[ext_resource path="res://object/button/button_v2.tscn" type="PackedScene" id=34]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 13 )
shader_param/width = 0.0
shader_param/outline_color = null

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 20, 20 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 7 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 12 )
shader_param/light_adjust = 0.0

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 14 )
shader_param/blur = 0.0

[sub_resource type="Shader" id=25]
code = "shader_type canvas_item;

uniform float blur : hint_range(0.3, 1.0);

void fragment(){
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur * 6.0);
}"

[sub_resource type="ShaderMaterial" id=24]
shader = SubResource( 25 )
shader_param/blur = 0.3

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 13 )
shader_param/width = null
shader_param/outline_color = null

[sub_resource type="ShaderMaterial" id=26]
shader = ExtResource( 13 )
shader_param/width = 2.0
shader_param/outline_color = Color( 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=7]

[sub_resource type="Animation" id=22]
resource_name = "LauDau"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Items2/GiayLauDau:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1.1, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 559, 554 ), Vector2( 313, 333 ), Vector2( 341, 317 ), Vector2( 313, 333 ), Vector2( 341, 317 ), Vector2( 559, 554 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Viewport/KinhHienVi")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "lauDau"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "NhoDau"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Items2/OngHutDd:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.4, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 3.08827, 3.08827, 52.3658, 52.3658, 3.08827, 3.08827 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Items2/OngHutDd:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.4, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 576, 419 ), Vector2( 581, 323 ), Vector2( 376, 308 ), Vector2( 376, 308 ), Vector2( 581, 323 ), Vector2( 576, 419 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Viewport/KinhHienVi")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "nhoDau"
} ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Items2/OngHutDd:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.08827 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Items2/OngHutDd:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 576, 419 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Items2/GiayLauDau:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 559, 554 ) ]
}

[node name="Practice" type="Node"]
script = ExtResource( 6 )

[node name="Interface" type="Node" parent="."]

[node name="Background" type="TextureRect" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 10 )
expand = true

[node name="Items" type="Node" parent="."]

[node name="PluginKHV" parent="Items" instance=ExtResource( 2 )]

[node name="Area2DSocket" parent="Items/PluginKHV" index="0"]
position = Vector2( 14, 500 )

[node name="PositionStart" parent="Items/PluginKHV" index="2"]
position = Vector2( 300, 444 )

[node name="Area2DPlugin" parent="Items/PluginKHV" index="3"]
position = Vector2( 157, 444 )

[node name="DauSoiKinh2" type="Sprite" parent="Items"]
visible = false
position = Vector2( 474.65, 400.8 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 17 )

[node name="NapDauSoiKinh" type="Sprite" parent="Items"]
position = Vector2( 618, 485 )
rotation = -3.13303
scale = Vector2( 0.671053, 0.671053 )
texture = ExtResource( 28 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
transparent_bg = true
msaa = 2
render_target_v_flip = true

[node name="KinhHienVi" parent="Viewport" instance=ExtResource( 1 )]
transform = Transform( -0.384677, 0, 0.319411, 0.0189876, 0.499116, 0.0228674, -0.318846, 0.0297229, -0.383997, -0.441749, 0.0482276, -0.232714 )

[node name="TieuBan" parent="Viewport" instance=ExtResource( 3 )]
transform = Transform( 0.480905, -0.00898195, 0.876727, -0.0479434, 0.998182, 0.0365243, -0.875461, -0.059598, 0.4796, 0.0223438, 0.056, -0.141953 )
script = ExtResource( 32 )

[node name="Box" parent="Viewport/TieuBan" index="1"]
transform = Transform( -0.025, -0.0116284, 0, 0.0433013, -0.00671369, -5.82077e-11, -9.31323e-10, 0, 0.075, 0.0500001, 0.00999999, 2.38419e-07 )

[node name="LamKinh" parent="Viewport/TieuBan" index="3"]
transform = Transform( 0.0427701, 0, -1.45519e-11, 0, 0.0124043, 0, 9.31323e-10, 0, 0.000645703, 0, 0.00272221, 0.0626713 )

[node name="Cylinder" parent="Viewport/TieuBan" index="4"]
transform = Transform( 0.00153802, 0, 0, 0, 0, -0.00153802, 1.45519e-10, 0.00863312, 0, 0.0539024, 0.01, 0.0614365 )

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 0.975477, 0.220102, 0, -0.220102, 0.975477, -0.168306, 0.360925, 0.499 )
fov = 51.7

[node name="DirectionalLight" type="DirectionalLight" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 0.9821, 0.188358, 0, -0.188358, 0.9821, 0.225394, 0.135357, 0.801633 )

[node name="Items2" type="Node" parent="."]

[node name="TextureRectHopTieuBan" type="TextureRect" parent="Items2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true

[node name="TextureRectKHV" type="TextureRect" parent="Items2"]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
mouse_filter = 2
expand = true

[node name="OngHutDd" type="Sprite" parent="Items2"]
position = Vector2( 576, 419 )
rotation = 0.0539005
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 29 )
__meta__ = {
"_editor_description_": ""
}

[node name="DauSoiKinh" type="Sprite" parent="Items2"]
position = Vector2( 575.591, 457.776 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 23 )

[node name="GiayLauDau" type="Sprite" parent="Items2"]
position = Vector2( 559, 554 )
rotation = -0.0867778
scale = Vector2( 0.203902, 0.211914 )
texture = ExtResource( 24 )
__meta__ = {
"_editor_description_": ""
}

[node name="GiayLauOngKinhv2" type="Sprite" parent="Items2"]
position = Vector2( 592.242, 571.496 )
rotation = -0.00697164
scale = Vector2( 0.322772, 0.322772 )
texture = ExtResource( 15 )

[node name="AreaCongTac" type="Area2D" parent="Items2"]
position = Vector2( 247, 479 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Items2/AreaCongTac"]
position = Vector2( -15, 0 )
shape = SubResource( 10 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ContainerInfo" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="BtnHopTieuBan" parent="CanvasLayer/ContainerInfo" instance=ExtResource( 34 )]
margin_left = 758.0
margin_top = 493.0
margin_right = 805.0
margin_bottom = 540.0
texture_normal = ExtResource( 16 )
label_name = "Hộp đựng lam kinh"

[node name="BtnKHV" parent="CanvasLayer/ContainerInfo" instance=ExtResource( 34 )]
margin_left = 370.0
margin_top = 462.0
margin_right = 417.0
margin_bottom = 509.0
texture_normal = ExtResource( 16 )
label_name = "Kinh hiển vi"

[node name="BtnDauSoiKinh" parent="CanvasLayer/ContainerInfo" instance=ExtResource( 34 )]
margin_left = 549.0
margin_top = 444.0
margin_right = 596.0
margin_bottom = 491.0
texture_normal = ExtResource( 16 )
label_name = "Dầu soi kinh"

[node name="BtnGiayLauKinh" parent="CanvasLayer/ContainerInfo" instance=ExtResource( 34 )]
margin_left = 558.0
margin_top = 548.0
margin_right = 605.0
margin_bottom = 595.0
texture_normal = ExtResource( 16 )
label_name = "Giấy lau kinh"

[node name="ViewListMauVat" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -268.5
margin_right = 221.0
margin_bottom = 268.5
mouse_filter = 2

[node name="Panel" type="Panel" parent="CanvasLayer/ViewListMauVat"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ViewListMauVat/Panel"]
margin_right = 220.0
margin_bottom = 37.0
theme = ExtResource( 9 )
text = "Tiêu bản"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="CanvasLayer/ViewListMauVat/Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -227.5
margin_right = -6.0
margin_bottom = 263.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
fixed_icon_size = Vector2( 64, 64 )

[node name="ViewControl" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -300.0
margin_right = 550.0
margin_bottom = 300.0
mouse_filter = 2

[node name="ViewMauVat" type="Sprite" parent="CanvasLayer/ViewControl"]
material = SubResource( 5 )
position = Vector2( 249, 354 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 579, 362, 290, 290 )

[node name="Blur" type="Sprite" parent="CanvasLayer/ViewControl"]
material = SubResource( 6 )
position = Vector2( 248, 354 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 579, 362, 288, 288 )

[node name="BlurOil" type="Sprite" parent="CanvasLayer/ViewControl"]
material = SubResource( 24 )
position = Vector2( 248, 354 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 579, 362, 288, 288 )
__meta__ = {
"_editor_description_": ""
}

[node name="Black" type="Sprite" parent="CanvasLayer/ViewControl"]
visible = false
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.898039 )
position = Vector2( 251, 354.5 )
scale = Vector2( 4.84375, 4.79688 )
texture = ExtResource( 18 )
region_rect = Rect2( 579, 362, 288, 288 )

[node name="TextureRectBlack" type="TextureRect" parent="CanvasLayer/ViewControl"]
material = SubResource( 9 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -550.0
margin_top = -347.5
margin_bottom = 347.5
texture = ExtResource( 22 )
expand = true
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ViewControl"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -550.0
margin_top = 20.0
margin_bottom = 166.0
rect_min_size = Vector2( 550, 140 )

[node name="Control" type="Control" parent="CanvasLayer/ViewControl/HBoxContainer"]
margin_right = 150.0
margin_bottom = 146.0
rect_min_size = Vector2( 150, 140 )

[node name="TextureRectKnob" type="TextureRect" parent="CanvasLayer/ViewControl/HBoxContainer/Control"]
material = SubResource( 26 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -60.0
margin_right = 75.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 120 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ViewControl/HBoxContainer"]
margin_left = 154.0
margin_right = 392.0
margin_bottom = 146.0
rect_min_size = Vector2( 238, 140 )

[node name="HSliderSoCap" type="HSlider" parent="CanvasLayer/ViewControl/HBoxContainer/VBoxContainer"]
margin_right = 238.0
margin_bottom = 46.0
rect_min_size = Vector2( 238, 46 )
theme = ExtResource( 9 )
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSliderViCap" type="HSlider" parent="CanvasLayer/ViewControl/HBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 238.0
margin_bottom = 96.0
rect_min_size = Vector2( 238, 46 )
theme = ExtResource( 9 )
max_value = 1.0
step = 0.01
__meta__ = {
"_editor_description_": ""
}

[node name="HSliderAnhSang" type="HSlider" parent="CanvasLayer/ViewControl/HBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 238.0
margin_bottom = 146.0
rect_min_size = Vector2( 238, 46 )
theme = ExtResource( 9 )
min_value = -0.5
max_value = 0.5
step = 0.01
value = -0.5
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainerText" type="VBoxContainer" parent="CanvasLayer/ViewControl/HBoxContainer"]
margin_left = 396.0
margin_right = 550.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 140 )
size_flags_horizontal = 7

[node name="LabelSoCap" type="Label" parent="CanvasLayer/ViewControl/HBoxContainer/VBoxContainerText"]
margin_right = 154.0
margin_bottom = 46.0
rect_min_size = Vector2( 0, 46 )
theme = ExtResource( 9 )
text = "     Sơ cấp"
valign = 1

[node name="LabelVicap" type="Label" parent="CanvasLayer/ViewControl/HBoxContainer/VBoxContainerText"]
margin_top = 50.0
margin_right = 154.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 46 )
theme = ExtResource( 9 )
text = "     Vi cấp"
valign = 1

[node name="LabelAnhSang" type="Label" parent="CanvasLayer/ViewControl/HBoxContainer/VBoxContainerText"]
margin_top = 100.0
margin_right = 154.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 46 )
theme = ExtResource( 9 )
text = "     Ánh sáng"
valign = 1

[node name="HSliderX" type="HSlider" parent="CanvasLayer/ViewControl"]
margin_left = 72.0
margin_top = 553.0
margin_right = 411.0
margin_bottom = 583.0
theme = ExtResource( 9 )
max_value = 1.0
step = 0.01
value = 0.5

[node name="VSliderY" type="VSlider" parent="CanvasLayer/ViewControl"]
margin_left = 17.0
margin_top = 201.0
margin_right = 47.0
margin_bottom = 540.0
theme = ExtResource( 9 )
max_value = 1.0
step = 0.01
value = 0.5

[node name="TextureButtonX4" type="TextureButton" parent="CanvasLayer/ViewControl"]
material = SubResource( 7 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -179.0
margin_top = -104.0
margin_right = -114.0
margin_bottom = -39.0
rect_pivot_offset = Vector2( 32, 32 )
texture_normal = ExtResource( 21 )

[node name="TextureButtonX10" type="TextureButton" parent="CanvasLayer/ViewControl"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -18.0
margin_right = -56.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 32, 32 )
texture_normal = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButtonX40" type="TextureButton" parent="CanvasLayer/ViewControl"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -121.0
margin_top = 81.0
margin_right = -56.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 32, 32 )
texture_normal = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButtonX100" type="TextureButton" parent="CanvasLayer/ViewControl"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -172.0
margin_top = 163.0
margin_right = -107.0
margin_bottom = 228.0
rect_pivot_offset = Vector2( 32, 32 )
texture_normal = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ViewControl"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.0
margin_top = -29.0
margin_right = -54.0
margin_bottom = -15.0
text = "SoCap: 000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/ViewControl"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -121.0
margin_top = -49.0
margin_right = -51.0
margin_bottom = -35.0
text = "ViCap: 000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alert" parent="CanvasLayer" instance=ExtResource( 33 )]

[node name="UserInterface" parent="CanvasLayer" instance=ExtResource( 8 )]

[node name="Tutorial" parent="CanvasLayer" instance=ExtResource( 5 )]
unique_name_in_owner = true
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LauDau = SubResource( 22 )
anims/NhoDau = SubResource( 12 )
anims/RESET = SubResource( 13 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="input_event" from="Items2/AreaCongTac" to="." method="_on_AreaCongTac_input_event"]
[connection signal="button_up" from="CanvasLayer/ContainerInfo/BtnHopTieuBan" to="." method="_on_BtnHopTieuBan_button_up"]
[connection signal="button_up" from="CanvasLayer/ContainerInfo/BtnKHV" to="." method="_on_BtnKHV_button_up"]
[connection signal="button_up" from="CanvasLayer/ContainerInfo/BtnDauSoiKinh" to="." method="_on_BtnDauSoiKinh_button_up"]
[connection signal="button_up" from="CanvasLayer/ContainerInfo/BtnGiayLauKinh" to="." method="_on_BtnGiayLauKinh_button_up"]
[connection signal="item_selected" from="CanvasLayer/ViewListMauVat/Panel/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="button_up" from="CanvasLayer/ViewControl/TextureButtonX4" to="." method="_on_TextureButtonX4_button_up"]
[connection signal="button_up" from="CanvasLayer/ViewControl/TextureButtonX10" to="." method="_on_TextureButtonX10_button_up"]
[connection signal="button_up" from="CanvasLayer/ViewControl/TextureButtonX40" to="." method="_on_TextureButtonX40_button_up"]
[connection signal="button_up" from="CanvasLayer/ViewControl/TextureButtonX100" to="." method="_on_TextureButtonX100_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]

[editable path="Items/PluginKHV"]
[editable path="Viewport/TieuBan"]
